--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "jquery": "^3.6.0",
     "rxjs": "latest",
     "serve": "^13.0.2"
   }
